fixing button heights on mobile

--- a/src/stylesheets/main.css
+++ b/src/stylesheets/main.css
@@ -487,96 +487,106 @@ p.footerContact {
 
   /* line 30, partials/_media.sass */
   .navigationContainer {
-    margin: 30px 0 0 0;
     width: 34%;
   }
 
-  /* line 33, partials/_media.sass */
+  /* line 32, partials/_media.sass */
   .headerButton {
     font-size: 24px;
     font-size: 1.5rem;
     padding: 0 15px 0 0;
   }
 
-  /* line 36, partials/_media.sass */
+  /* line 35, partials/_media.sass */
+  .fas {
+    margin: 30px 0 0 0;
+  }
+
+  /* line 37, partials/_media.sass */
   .techStack, .other, .resources, .other, .resources {
     width: 100%;
     margin: 0 auto 0 auto;
   }
 
-  /* line 40, partials/_media.sass */
+  /* line 41, partials/_media.sass */
   .content p {
     padding: 10px 50px 0 40px;
   }
-  /* line 41, partials/_media.sass */
+  /* line 42, partials/_media.sass */
   .content p::first-letter {
     font-size: 200%;
   }
 
-  /* line 44, partials/_media.sass */
+  /* line 45, partials/_media.sass */
   .headerBio, .bioHeader h1, .techStack h1, .other h1, .resources h1 {
     font-size: 60px;
     font-size: 3.75rem;
   }
 
-  /* line 46, partials/_media.sass */
+  /* line 47, partials/_media.sass */
   .bioHeader, .techStack, .other, .resources {
     height: 120px;
   }
 
-  /* line 48, partials/_media.sass */
+  /* line 49, partials/_media.sass */
   .bioImage {
     width: 150px;
   }
 
-  /* line 50, partials/_media.sass */
+  /* line 51, partials/_media.sass */
   .flex-item {
     width: 33%;
   }
 
-  /* line 52, partials/_media.sass */
+  /* line 53, partials/_media.sass */
   .technologyImage {
     width: 160px;
     height: 160px;
   }
 
-  /* line 55, partials/_media.sass */
+  /* line 56, partials/_media.sass */
   .footer {
     height: 180px;
   }
 
-  /* line 57, partials/_media.sass */
+  /* line 58, partials/_media.sass */
   .footerContact, .footerQuestions {
     font-size: 30px;
     font-size: 1.875rem;
   }
 
-  /* line 59, partials/_media.sass */
+  /* line 60, partials/_media.sass */
   .comingSoon {
     width: 25%;
   }
 
-  /* line 61, partials/_media.sass */
+  /* line 62, partials/_media.sass */
   .footerPreferencesContainer {
     width: 25%;
   }
 
-  /* line 63, partials/_media.sass */
+  /* line 64, partials/_media.sass */
   .resourcesLink, .resourcesText {
     font-size: 30px;
     font-size: 1.875rem;
     padding: 10px 0 10px 0;
   }
 
-  /* line 67, partials/_media.sass */
+  /* line 68, partials/_media.sass */
   .contactContent p {
     font-size: 40px;
     font-size: 2.5rem;
     padding: 10px 50px 0 40px;
   }
 
-  /* line 70, partials/_media.sass */
+  /* line 71, partials/_media.sass */
   .resourcesText {
     font-weight: 400;
+  }
+
+  /* line 74, partials/_media.sass */
+  .bigger {
+    font-size: 50px;
+    font-size: 3.125rem;
   }
 }
