--- a/src/stylesheets/partials/_media.sass
+++ b/src/stylesheets/partials/_media.sass
@@ -28,11 +28,12 @@
   .contactLinks
     margin: 30px 0 0 0
   .navigationContainer
-    margin: 30px 0 0 0
     width: 34%
   .headerButton
     @include font-size(24px)
     padding: 0 15px 0 0
+  .fas
+    margin: 30px 0 0 0
   .techStack, .other, .resources
     width: 100%
     margin: $auto-margin
@@ -69,3 +70,6 @@
       padding: 10px 50px 0 40px
   .resourcesText
     font-weight: 400
+
+  .bigger
+    @include font-size(50px)
